v1.1.0/modules/schema/pages/class/DatasetArgDescription.adoc
= `DatasetArgDescription`
:toclevels: 4



[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DatasetArgDescription`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/ModelOperationArgDescription.adoc[`ModelOperationArgDescription`]
*** *`DatasetArgDescription`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<OperationDatasetArg,`OperationDatasetArg`>>
//| [[slots_table.OperationDatasetArg]]<<OperationDatasetArg,`OperationDatasetArg`>>
| 0..* +
xref::class/DatasetArg.adoc[`DatasetArg`]
| +++The operation dataset roles conforming to this role type.+++
| _n/a_

| <<ModelOperationDefinition,`ModelOperationDefinition`>>
//| [[slots_table.ModelOperationDefinition]]<<ModelOperationDefinition,`ModelOperationDefinition`>>
| 1 +
xref::class/ModelOperationDescription.adoc[`ModelOperationDescription`]
| +++The type of operation for this type of dataset role.   Operations referencing the dataset role type should only belong to...+++
| xref::class/ModelOperationArgDescription.adoc[`ModelOperationArgDescription`]

| <<multiplicityMaximum,`multiplicityMaximum`>>
//| [[slots_table.multiplicityMaximum]]<<multiplicityMaximum,`multiplicityMaximum`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++The maximum multiplicity of the instance arguments that should be supplied for a single operation.     Use -1 to indicate unlimited.+++
| xref::class/ModelOperationArgDescription.adoc[`ModelOperationArgDescription`]

| <<multiplicityMinimum,`multiplicityMinimum`>>
//| [[slots_table.multiplicityMinimum]]<<multiplicityMinimum,`multiplicityMinimum`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++The minimum multiplicity of the instance arguments that should be supplied for a single operation.     Use zero to indicate optional.+++
| xref::class/ModelOperationArgDescription.adoc[`ModelOperationArgDescription`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ModelOperationDefinition]
=== `ModelOperationDefinition`
+++The type of operation for this type of dataset role.   Operations referencing the dataset role type should only belong to operations that reference the operation type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ModelOperationArgDescription.ModelOperationDefinition`
| Cardinality
| 1
| Type
| xref::class/ModelOperationDescription.adoc[`ModelOperationDescription`]

| Inherited from
| xref::class/ModelOperationArgDescription.adoc[`ModelOperationArgDescription`]


|===

////
[.text-left]
--
<<slots_table.ModelOperationDefinition,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#multiplicityMaximum]
=== `multiplicityMaximum`
+++The maximum multiplicity of the instance arguments that should be supplied for a single operation.     Use -1 to indicate unlimited.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ModelOperationArgDescription.multiplicityMaximum`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ModelOperationArgDescription.adoc[`ModelOperationArgDescription`]


|===

////
[.text-left]
--
<<slots_table.multiplicityMaximum,&#10548;>>
--
////


//[discrete]
[#multiplicityMinimum]
=== `multiplicityMinimum`
+++The minimum multiplicity of the instance arguments that should be supplied for a single operation.     Use zero to indicate optional.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ModelOperationArgDescription.multiplicityMinimum`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ModelOperationArgDescription.adoc[`ModelOperationArgDescription`]


|===

////
[.text-left]
--
<<slots_table.multiplicityMinimum,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OperationDatasetArg]
=== `OperationDatasetArg`
+++The operation dataset roles conforming to this role type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DatasetArgDescription.OperationDatasetArg`
| Cardinality
| 0..*
| Type
| xref::class/DatasetArg.adoc[`DatasetArg`]


|===

////
[.text-left]
--
<<slots_table.OperationDatasetArg,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/DatasetArg.adoc[`DatasetArg`] | xref::class/DatasetArg.adoc#OperationDatasetArgDescription[`OperationDatasetArgDescription`]


|===

